--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,11 @@
-* {
+  :root {
+    --white: #FFFFFF;
+    --grey: #FAFAFA;
+    --green: #90EE90;
+    --borderRadius: 25px;
+  }
+
+  * {
     min-width: 0;
     font: inherit;
   }
@@ -13,11 +20,7 @@
     max-width: 100%;
   }
   
-  body {
-    margin: 0;
-    min-height: 100dvh;
-  }
-  
+
   h1, h2, h3, h4, h5, h6 {
     text-wrap: balance;
   }
