--- a/components/topBar/topBar.module.css
+++ b/components/topBar/topBar.module.css
@@ -1,4 +1,56 @@
 .container {
-    background-color: red;
-    height: calc(10px + 4vw);
+    background-color: var(--white);
+    height: calc(13px + 5vw);
+    border-top-left-radius: var(--borderRadius);
+    border-top-right-radius: var(--borderRadius);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: calc(8px + 3vw);
 }
+
+.container > ul {
+    display: flex;
+    gap: calc(7px + 3vw);
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.bloomImage {
+    width: calc(10px + 6vw);
+    height:calc(8px + 4vw);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.image {
+    position: relative !important;
+    width: 100%;
+    height: 100%;
+  }
+
+.menu {
+   width: calc(10px + 3vw);
+   display: none;
+}  
+
+.image {
+    position: relative !important;
+    width: 100%;
+    height: 100%;
+  }
+
+@media screen and (max-width: 1024px) {
+    .container {
+        height: calc(19px + 11vw);
+    }
+    .container > ul {
+        display: none;
+    }
+
+    .menu {
+        display: block;
+     }  
+  }  
