--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
   :root {
     --white: #FFFFFF;
     --grey: #FAFAFA;
-    --green: #90EE90;
+    --green: #61cbb6;
     --borderRadius: 25px;
   }
 
