--- a/components/topBar/topBar.module.css
+++ b/components/topBar/topBar.module.css
@@ -18,8 +18,9 @@
 }
 
 .bloomImage {
-    width: calc(10px + 6vw);
-    height:calc(8px + 4vw);
+    position: relative;
+    width: auto;
+    height:calc(8px + 2vw);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,16 +28,16 @@
 
 .image {
     position: relative !important;
-    width: 100%;
-    height: 100%;
+    object-fit: cover;
   }
 
 .menu {
+   position: relative;
    width: calc(10px + 3vw);
    display: none;
 }  
 
-.image {
+.image2 {
     position: relative !important;
     width: 100%;
     height: 100%;
